--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Disable .env files
+
+.env
+.env.develop
+.env.testing
+.env.production
